--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,5 @@ logging.level.com.jkngil.pos.api.users.data.AlbumsServiceClient=DEBUG
 spring.zipkin.base-url=http://localhost:9411
 spring.zipkin.sender.type=web
 spring.sleuth.sampler.probability=0.1
+
+logging.file.name=users-ws.log
