--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,8 +46,8 @@ spring.rabbitmq.password=guest
 
 logging.level.com.jkngil.pos.api.users.data.AlbumsServiceClient=DEBUG
 
-spring.zipkin.base-url=http://localhost:9411
-spring.zipkin.sender.type=web
-spring.sleuth.sampler.probability=0.1
+#spring.zipkin.base-url=http://localhost:9411
+#spring.zipkin.sender.type=web
+#spring.sleuth.sampler.probability=0.1
 
-logging.file.name=users-ws.log
+#logging.file.name=users-ws.log
